patterns/gitops/getting-started-argocd/k8s/game-2048.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: game-2048
spec: {}
---
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  namespace: game-2048
  name: game-2048
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: game-2048
  template:
    metadata:
      labels:
        app.kubernetes.io/name: game-2048
    spec:
      containers:
        - name: game-2048
          image: public.ecr.aws/l6m2t8p7/docker-2048:v2
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 2
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
            failureThreshold: 3
  strategy:
    canary:
      maxUnavailable: 0
      maxSurge: 1
      steps:
        - setWeight: 50
        - pause: { duration: 30 }
        - setWeight: 100
        - pause: { duration: 10 }
---
apiVersion: v1
kind: Service
metadata:
  namespace: game-2048
  name: game-2048
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 31427
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: game-2048
