patterns/gitops/getting-started-argocd/k8s/ingress-game-2048.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-2048
  namespace: game-2048
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/hostname: game.apps.miempresa.local
spec:
  rules:
  - host: game.apps.miempresa.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: game-2048
            port:
              name: http
